# nami

./: .env.template  .env.template.sentry-build-plugin  .eslintignore  .eslintrc  .gitignore  .nvmrc  .prettierrc  LICENSE  MessageSigning.md  NOTICE  README.md  babel.config.js  build.crx  build.pem  capacitor.config.ts  index.d.ts  jest.config.js  jest.setup.js  nami-migration-tool-0.0.41.tgz  package-lock.json  package.json  secrets.testing.js  tsconfig.json  webpack.config.js  xsy-nami-migration-tool-0.0.1.tgz  xsy-nami-migration-tool-0.0.2.tgz  xsy-nami-migration-tool-0.0.39.tgz  xsy-nami-migration-tool-0.0.5.tgz  xsy-nami-migration-tool-0.0.6.tgz
.github/: issue-comments-validate.yml
.github/workflows/: ci.yml  comments-moderation.yml  nodejs.yml
.storybook/: main.js  preview.jsx
.storybook/mocks/: webextension-polyfill.mock.ts
android/app/: build.gradle
src/: manifest copy.json  manifest.json  manifest.v3.json  manifest3.json
src/api/: loader.js  messaging.js  popup.js  rust-loader.js  test  util.js
src/config/: config.js  provider.js
src/features/: sentry.js
src/lib/: CoinSelection.js  CoinSelectionTest.js  coinSelection.js  migration.js
src/migrations/: 1.0.0.js  1.1.4.js  1.1.5.js  1.1.7.js  2.0.0.js  2.3.0.js  2.3.2.js  2.3.3.js  3.0.2.js  3.3.0.js  migration.js
src/plugins/: DAppConnector.js
src/test/: coinSelectionTest.js  coinSelectionTest.test.js  unit.test.js
src/ui/: Start.jsx  app.jsx  index.jsx  indexInternal.jsx  indexMain.jsx  store.jsx  (+1 more)
src/wasm/cardano_message_signing/: Cargo.toml  LICENSE  cardano_message_signing.generated.js  cardano_message_signing_bg.wasm
src/wasm/cardano_message_signing/nodejs/: cardano_message_signing.generated.js
src/wasm/cardano_message_signing/src/: builders.rs  cbor.rs  crypto.rs  error.rs  lib.rs  serialization.rs  utils.rs
src/wasm/cardano_multiplatform_lib/: Cargo.toml  LICENSE  LICENSE-EMURGO  LICENSE-IOHK  cardano_multiplatform_lib.generated.js  cardano_multiplatform_lib_bg.wasm
src/wasm/cardano_multiplatform_lib/nodejs/: cardano_multiplatform_lib.generated.js
src/wasm/cardano_multiplatform_lib/src/: address.rs  conway.rs  crypto.rs  emip3.rs  error.rs  fees.rs  lib.rs  metadata.rs  output_builder.rs  plutus.rs  serialization.rs  traits.rs  tx_builder.rs  tx_builder_utils.rs  utils.rs  witness_builder.rs
src/wasm/cardano_multiplatform_lib/src/chain_core/: abor.rs  mempack.rs  mod.rs  packer.rs  property.rs
src/wasm/cardano_multiplatform_lib/src/chain_crypto/: bech32.rs  derive.rs  digest.rs  hash.rs  key.rs  mod.rs  sign.rs  testing.rs
src/wasm/cardano_multiplatform_lib/src/chain_crypto/algorithms/: ed25519.rs  ed25519_derive.rs  ed25519_extended.rs  legacy_daedalus.rs  mod.rs
src/wasm/cardano_multiplatform_lib/src/impl_mockchain/: key.rs
src/wasm/cardano_multiplatform_lib/src/legacy_address/: address.rs  base58.rs  cbor.rs  crc32.rs  mod.rs
src/wasm/cardano_multiplatform_lib/src/typed_bytes/: builder.rs  mod.rs
utils/: build.js  env.js  webserver.js
(+342 files in other folders)
