[package]
name = "cardano-message-signing"
version = "1.0.1"
edition = "2018"
authors = ["EMURGO"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64-url = "1.4.8"
byteorder = "1.4.3"
cbor_event = "2.1.3"
cryptoxide = "0.3.2"
#curve25519-dalek = { "path" = "curve25519-dalek" }
linked-hash-map = "0.5.3"
hex = "0.4.0"
pruefung = "0.2.1"

# non-wasm
[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
noop_proc_macro = "0.3.0"

# wasm
[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
wasm-bindgen = { version = "0.2.84", features=["serde-serialize"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
codegen-units = 1
opt-level = "s"
incremental = true
lto = true
