[package]
name = "cardano-multiplatform-lib"
version = "0.1.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform SDK for core Cardano blockchain functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/doc"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme="../README.md"
exclude = [
    "pkg/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cryptoxide = "0.4.4"
cbor_event = "2.1.3"
ed25519-bip32 = "0.4.1"
sha2 = "^0.9"
digest = "^0.9"
bech32 = "0.7.2"
hex = "0.4.0"
cfg-if = "1"
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
num-bigint = "0.4.0"
# The default can't be compiled to wasm, so it's necessary to use either the 'nightly'
# feature or this one
clear_on_drop = { version = "0.2", features = ["no_cc"] }
itertools = "0.10.1"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
schemars = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.59"
fraction = "0.10.0"
num-integer = "0.1.45"
uplc = { git = "https://github.com/aiken-lang/aiken.git", rev = "cdff149b5e9084f5249992c0dcb9e4ca3a972d05", default-features = false, features = ["native-secp256k1"]}

# non-wasm
[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
rand_os = "0.1"
noop_proc_macro = "0.3.0"

# wasm
[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
wasm-bindgen = { version = "=0.2.84", features = ["serde-serialize"] }
rand_os = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "=0.3.61"
wasm-bindgen-futures = "=0.4.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
codegen-units = 1
opt-level = "s"
incremental = true
lto = true

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand_os = "0.1"
rand_chacha = "0.1"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console'
]